# data-streaming-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docker/spark/: Dockerfile  spark-defaults.conf
scripts/: produce_taxi_events.py
src/dsp/config/: logs.py  settings.py
src/dsp/pipelines/taxi/: bronze_stream.py  silver_stream.py
src/dsp/streaming/: runner.py
tests/integration/: conftest.py  test_delta_smoke.py
tests/integration/pipelines/taxi/: test_bronze_stream.py  test_silver_stream.py
tests/unit/pipelines/taxi/: test_bronze_stream.py  test_silver_stream.py
tests/unit/streaming/: test_runner.py
