[project]
name = "data-streaming-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "confluent-kafka>=2.13.0",
    "delta-spark>=4.1.0",
    "pydantic-settings>=2.13.1",
    "pyspark>=4.1.1",
    "structlog>=25.5.0",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
